--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "autoprefixer": "^6.1.0",
     "babel-core": "^6.6.0",
-    "babel-eslint": "^5.0.0-beta6",
+    "babel-eslint": "^6.0.0-beta.6",
     "babel-loader": "^6.2.0",
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-plugin-react-intl": "^2.1.1",
@@ -43,10 +43,11 @@
     "classnames": "^2.1.1",
     "compression": "^1.4.0",
     "cors": "^2.6.0",
+    "cp": "^0.2.0",
     "css-loader": "^0.23.0",
     "del": "^2.1.0",
     "enzyme": "^2.0.0",
-    "eslint": "2.2.0",
+    "eslint": "^2.4.0",
     "eslint-config-airbnb": "^6.0.2",
     "eslint-loader": "^1.1.1",
     "eslint-plugin-babel": "^3.0.0",
